--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"mongoose": "^8.10.1",
 		"mqtt": "^5.10.1",
 		"multer": "^2.0.2",
+		"node-cron": "^4.2.1",
 		"nodemailer": "^6.9.16",
 		"nodemon": "^3.1.4",
 		"socket.io": "^4.8.0",
