--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"exceljs": "^4.4.0",
 		"express": "^4.19.2",
 		"express-session": "^1.18.0",
+		"json2csv": "^6.0.0-alpha.2",
 		"jsonwebtoken": "^9.0.2",
 		"mongodb": "^6.13.0",
 		"mongoose": "^8.10.1",
