알람 Y값 제거 및 노드 최신 값 반환 엔드포인트 추가, 보고서 표1 완료 본

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"license": "ISC",
 	"description": "",
 	"dependencies": {
+		"adm-zip": "^0.5.16",
 		"assert": "^2.1.0",
 		"axios": "^1.7.9",
 		"bcryptjs": "^2.4.3",
