--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
 		"mongoose": "^8.10.1",
 		"mqtt": "^5.10.1",
 		"multer": "^2.0.2",
+		"mustache": "^4.2.0",
 		"node-cron": "^4.2.1",
 		"nodemailer": "^6.9.16",
 		"nodemon": "^3.1.4",
+		"puppeteer": "^24.26.1",
 		"socket.io": "^4.8.0",
 		"telegraf": "^4.16.3",
 		"tr46": "^5.0.0",
